--- a/examples/hit/README
+++ b/examples/hit/README
@@ -1,1 +1,6 @@
-Homogeneous isotropic turbulence test case, based on linear forcing and FFT-based Poisson solver.
+Homogeneous isotropic turbulence test case, based on linear forcing and FFT-based Poisson solver.i
+
+
+
+FOR STK30 PARTICLES:
+RESTART FROM 10.5009
